--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
 
     <string name="menu_home">Home</string>
     <string name="menu_SDC">Short Digit Codes</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_location">My Location</string>
     <string name="menu_tools">Tools</string>
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
